--- a/var/www/html/avr-main.html
+++ b/var/www/html/avr-main.html
@@ -24,7 +24,7 @@
         <strong>Audio-Video-Receiver Control</strong> Made by MrApplecraft :D
       </div>
 <iframe name="votar" style="display:none;"></iframe>
-      <form action='/index.php' method='POST' target="votar">
+      <form action='/lirc.php' method='POST' target="votar">
       <p>
       	<button type="submit" name="power" class="btn btn-danger center-block">Power</button>
       </p>
